<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/edit_patient_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_patient_name"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/edit_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_date"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/edit_time"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_time"
        android:inputType="none"
        android:focusable="false"
        android:clickable="true"
        android:layout_marginTop="8dp" />

    <EditText
        android:id="@+id/edit_reason"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_reason"
        android:inputType="textMultiLine"
        android:minLines="2"
        android:layout_marginTop="8dp" />
</LinearLayout>